--- a/css/grid.css
+++ b/css/grid.css
@@ -123,6 +123,11 @@
   padding: 1rem;
   flex: 1 1 20%;
   height: 30rem;
+  border-radius: 5px;
+}
+
+.filter-style {
+  display: block;
 }
 
 .catalog-list {
