--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,11 @@ a, a:visited{
   text-align: center;
 }
 
+.noscript-a {
+  color:blue !important;
+}
+
+
 .item:active{
   border:0.01em solid black;
 }
@@ -102,6 +107,7 @@ a, a:visited{
   margin-top: 0;
   font-size: 1.2em;
   font-weight: bolder;
+  padding-bottom: 0.2em;
 }
 
 .card{
@@ -389,6 +395,9 @@ ul{
 .shipping {
 	background-color: white;
 }
+.shipping ul{
+  padding-left: 0;
+}
 
 
 
@@ -425,7 +434,9 @@ ul{
   box-shadow: 0.5em 0.5em 1em -0.4em;
 }
 
-
+.profile-info h3{
+  margin-top: 0;
+}
 
 .profile-left, .profile-right{
     margin-top: 3em;
@@ -457,6 +468,8 @@ ul{
   background-color: white;
   box-shadow: 0.5em 0.5em 1em -0.4em;
 }
+
+
 
 .profile-right{
   padding-left: 2em;
@@ -490,7 +503,9 @@ ul{
   clear:both;
 }
 
-
+.profile-notification h3{
+  margin-top: 1em;
+}
 
 .profile-notification > ul{
 
@@ -499,6 +514,13 @@ ul{
 .profile-notification > ul >li{
   margin-bottom: 0.5em;
 }
+
+.updateMessage, .passwordUpdate{
+  color:red;
+  display:none;
+}
+
+
 
 .profile-billing > ul{
   margin-top: 0;
@@ -618,7 +640,7 @@ address span{
 	}
   .catalog-filter{
     max-width:20%;
-    
+
     margin-right: 2em;
   }
 
