--- a/css/styles.css
+++ b/css/styles.css
@@ -82,8 +82,9 @@ a, a:visited{
 
 }
 
-.catalog-list > .item{
-  padding: 1rem;
+
+.catalog-list .item{
+  padding: 2em 1em 1rem;
   text-align: center;
 }
 
@@ -95,12 +96,12 @@ a, a:visited{
 .item:active{
   border:0.01em solid black;
 }
-.item > img{
+.item img{
   width:40%;
 
 
 }
-.item > p{
+.item p{
   margin: 0.1em;
 }
 
@@ -171,6 +172,8 @@ a, a:visited{
   transition: background-color 0.5s ease-out;
 }
 
+
+
 .item, .catalog{
 	background-color: rgb(245, 245, 245);
 	text-decoration: none;
@@ -185,7 +188,7 @@ a, a:visited{
 }
 
 
-.club > img{
+.club  img{
   max-height:5rem;
   width:auto;
   display: block;
@@ -193,7 +196,7 @@ a, a:visited{
 
 }
 
-.club > p{
+.club p{
   padding-top: 0.8em;
   font-size: 0.85rem;
   text-align: center;
@@ -431,7 +434,25 @@ ul{
 
 .about-content{
   background-color: white;
-  margin:2em 15em;
+  margin:2em 20em;
+  box-shadow: 0.5em 0.5em 1em -0.4em;
+}
+
+.profile-right{
+  padding-left: 2em;
+  margin-left: 10em;
+  margin-right: 10em;
+  flex:85%;
+  align-items: center;
+
+}
+
+.profile-item{
+  padding-right: 0;
+  width:65%;
+  margin-top: 5em;
+
+  background-color: white;
   box-shadow: 0.5em 0.5em 1em -0.4em;
 }
 
@@ -439,9 +460,7 @@ ul{
   margin-top: 0;
 }
 
-.profile-left, .profile-right{
-    margin-top: 3em;
-}
+
 
 .profile-left{
   margin-left: 2em;
@@ -472,12 +491,7 @@ ul{
 
 
 
-.profile-right{
-  padding-left: 2em;
-  margin-right: 2.5em;
-  flex:85%;
 
-}
 
 #picUpload{
   border:0.01em solid grey;
@@ -551,12 +565,7 @@ address span{
   padding-left: 1em;
 }
 
-.profile-item{
-  padding-right: 0;
-  width:100%;
-  background-color: white;
-  box-shadow: 0.5em 0.5em 1em -0.4em;
-}
+
 
 .section-separator{
   margin: 0em 1em;
@@ -582,9 +591,23 @@ address span{
   padding-left: 0;
 }
 
-#profile-info{
-  margin-bottom: 3em;
+.shipping-box, .payment-box, .confirmation-box{
+  margin-bottom: 5em;
 }
+
+
+.confirmation-box{
+  margin-top: 2em;
+  background:white;
+  text-align: center;
+  height: 10em;
+  width:50em;
+
+}
+.confirmation-box h3{
+  margin-bottom: 2em;
+}
+
 
 
 @media only screen and (max-width: 100em){
@@ -604,7 +627,9 @@ address span{
     flex:18%;
   }
 
-
+  .profile-item{
+    margin-bottom: 10em;
+  }
 
 }
 
@@ -613,7 +638,7 @@ address span{
     flex:20%;
   }
   .catalog-filter{
-    height:18em;
+    height:12em;
   }
 
 }
@@ -680,12 +705,14 @@ address span{
 	  margin:2em 5em;
 	}
   .catalog-filter{
-    max-width: 50%;
+    height:13em;
   }
 }
 
-@media(max-width:59em){
-
+@media(max-width:61em){
+  .catalog-filter{
+    height:15em;
+  }
 }
 
 
@@ -745,6 +772,11 @@ address span{
     padding-right: 1em;
   }
 
+  .catalog-filter{
+    margin-left: 2em;
+    max-width: 100%;
+  }
+
 
 }
 
@@ -773,7 +805,7 @@ address span{
   }
 
   .section-club{
-    margin-left: 3em;
+    margin-left: 1.5em;
     justify-content: flex-start;
   }
   .club {
@@ -864,7 +896,17 @@ address span{
   .catalog-filter{
     min-width:35%;
   }
+  .index-category{
+    flex:10%;
+    margin-right: 1em;
+
+  }
+  .index-category a{
+    font-size: 0.9em;
+  }
 }
+
+
 
 @media(max-width: 25em){
   .change-password ul >li{
@@ -873,9 +915,23 @@ address span{
   .change-password ul > li > label{
     padding-right: 5em;
   }
-  #pic
 
 
+
+}
+
+@media(max-width:24em){
+  .index-category{
+    margin-right: 0.5em;
+
+  }
+  .index-category a{
+    margin-left:0.5em;
+  }
+  .section-club{
+    margin-left: 0.5em;
+
+  }
 }
 
 @media(max-width:22em){
