--- a/css/styles.css
+++ b/css/styles.css
@@ -359,7 +359,7 @@ ul{
   padding: 0.5em 1.2em 1.2em;
   box-shadow: 0.5em 0.5em 1em -0.4em;
   background-color: white;
-
+  overflow:auto;
   z-index: 1;
   max-width: 50%;
   width:50%;
@@ -376,6 +376,7 @@ ul{
 }
 .review-description{
   clear:both;
+
 }
 
 .review-write{
