--- a/css/styles.css
+++ b/css/styles.css
@@ -289,8 +289,13 @@ ul{
   list-style: none;
 }
 
-.payment-form > ul{
+.payment-form  ul{
   list-style: none;
+}
+
+.payment-form input{
+  margin-right: 0.3em;
+  margin-bottom: 0.5em;
 }
 
 .shipping >li{
