--- a/Style_Guide/css/flexbox.css
+++ b/Style_Guide/css/flexbox.css
@@ -178,7 +178,7 @@ input{
   background-color: grey;
 }*/
 
-.circular-button{
+/*.circular-button{
   border-radius: 50%;
   width:5rem;
   height:5rem;
@@ -190,7 +190,24 @@ input{
 
 .circular-button:hover{
     background-color:grey;
+}*/
+
+.circular-button {
+  color: rgb(248, 239, 228);
+  text-decoration: none;
+  transition: background-color 0.5s ease-out;
+  background-color: #952424;
+  padding: 1rem;
+  margin-bottom: 1em;
 }
+
+
+.circular-button:active, .circular-button:hover, .circular-button:focus {
+  background-color: rgb(230,136,136);
+}
+
+
+
 /* Text Styling article styling */
 #text-styling{
   position: absolute;
