--- a/css/styles.css
+++ b/css/styles.css
@@ -91,7 +91,7 @@ a, a:visited{
 .catalog-filter {
   margin-top:3em;
   	background-color: white;
-    box-shadow: 0.5em 0.5em 1em -0.4em;
+    border-left: 0.5em solid #541D81;
 }
 
 .catalog-list{
@@ -337,7 +337,7 @@ ul{
     z-index: 1;
     height:auto;
     width:auto;
-    margin-bottom: 1.5em;
+    margin-bottom: 5em;
 
 
 }
@@ -354,7 +354,7 @@ ul{
 }
 
 .product-img {
-	background-color: rgb(192, 215, 250);
+	background-color: #E2E2E2;
 }
 
 .product-info {
@@ -367,22 +367,25 @@ ul{
 }
 
 .product-review {
+  border-top: 0.1em solid black;
   display:inline-flex;
   flex-flow:column nowrap;
   align-items: center;
-	background-color: rgb(122, 135, 180);
+	background-color: white;
   padding-left: 1em;
   padding-bottom: 2em;
   align-items: center;
+  margin-top: 1em;
 
 }
 
 .review-item{
+  border:0.05em solid grey;
   flex:1 0 100%;
   margin: 1em 1.5em;
   margin-bottom: 1.5em;
   padding: 0.5em 1.2em 1.2em;
-  box-shadow: 0.5em 0.5em 1em -0.4em;
+  box-shadow: 0.5em 0.5em 1em -0.6em;
   background-color: white;
   overflow:auto;
   z-index: 1;
@@ -479,11 +482,12 @@ ul{
 
 }
 
-.profile-item{
+.profile-info{
   padding: 2em 3em;
   padding-left: 2em;
-  min-width:85%;
-  margin-top: 5em;
+  min-width:50%;
+  margin-top: 3em;
+  max-width:25em;
 
 
   background-color: white;
@@ -494,6 +498,9 @@ ul{
   margin-top: 0;
 }
 
+#account-settings{
+  text-align: center;
+}
 
 
 .profile-detail >img{
@@ -639,6 +646,14 @@ address span{
   padding: 2rem;
 }
 
+.shipping form:last-child{
+  margin-top: 1em;
+}
+
+summary{
+  margin-bottom: 1em;
+}
+
 @media only screen and (max-width: 100em){
 
 
@@ -667,7 +682,7 @@ address span{
     flex:20%;
   }
   .catalog-filter{
-    height:12em;
+    height:15em;
   }
 
 }
@@ -696,7 +711,7 @@ address span{
   .catalog-filter{
     max-width:20%;
 
-    margin-right: 2em;
+
   }
 
 
@@ -716,10 +731,12 @@ address span{
     margin-left:2em;
     margin-right: 2em;
     justify-content: center;
+    margin-bottom: 1em;
 
   }
   .product-right{
     min-width:30%;
+    margin-bottom: 5em;
   }
   .product-img{
     flex:35%;
@@ -736,9 +753,7 @@ address span{
   	.about-content{
 	  margin:2em 5em;
 	}
-  .catalog-filter{
-    height:13em;
-  }
+
 }
 
 @media(max-width:61em){
@@ -809,7 +824,8 @@ address span{
   }
 
   .catalog-filter{
-    margin-left: 2em;
+    margin-left: 1em;
+    margin-right: 1em;
     max-width: 100%;
   }
   .review-write textarea{
@@ -1075,5 +1091,6 @@ address span{
   }
   .product-right{
     padding-left: 1em;
+    margin-bottom: 5em;
   }
 }
