--- a/css/styles.css
+++ b/css/styles.css
@@ -851,6 +851,26 @@ summary{
 
 }
 
+@media(max-width:45em){
+  .nav-row-1, .nav-main-logo-img{
+    flex:25%;
+  }
+
+  .header-row-2{
+    flex:50%;
+
+  }
+  .header-row-2 input{
+    width:100%;
+  }
+
+
+  .header-row-2 img{
+
+    display:none;
+  }
+
+}
 
 
 
@@ -968,6 +988,29 @@ summary{
   }
 }
 
+@media(max-width: 37.5em){
+
+  .nav-row-1{
+    margin-left: 0;
+  }
+  .profile-cart{
+    margin-top: 2em;
+  }
+
+  .nav-main-item img{
+    max-width: 2em;
+    padding-right: 0;
+    margin-right: 1em;
+    height:auto;
+    vertical-align: middle;
+  }
+
+  .cart-nav{
+    margin-left: 1em;
+    margin-right: 0.1em;
+  }
+}
+
 @media(max-width: 35em){
   .nav-row-1{
     margin-right: 0;
@@ -1024,6 +1067,11 @@ summary{
 }
 
 @media(max-width: 25em){
+
+  .nav-row-3 a{
+    font-size: 0.75em;
+  }
+
   .change-password ul >li{
     text-align: left;
   }
@@ -1068,6 +1116,11 @@ summary{
   footer a{
     padding: 0 4vw;
   }
+  .header-row-2{
+    margin-right: 0.5em;
+  }
+
+
 }
 
 @media(max-width:22em){
